# splines

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  package.xml
cmake/: SplinesConfig.cmake.in
cpp/include/: spline.h
cpp/include/splines/: spline.h
cpp/src/: spline.cpp
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/splines/: spline.rs
src/: lib.rs  main.rs
src/splines/: spline.rs
test_utils/: plot_spline.py  spline_samples.csv
tests/: cubic_spline.cpp
