<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>splines</name>
  <version>0.18.2</version>
  <description>Spline interpolation library for ROS 2</description>
  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/splines</url>
  <url type="repository">https://github.com/frankarobotics/splines</url>
  <url type="bugtracker">https://github.com/frankarobotics/splines/issues</url>
  <author>Franka Robotics GmbH</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
